--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # dotenv environment variables file
 .env
 .env.test
+
+# node_modules
+node_modules
+
+# package-lock.json if npm version 5+
+.package-lock.json
