New start command, new models (brands,  sneakers)

--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
   }
 }
