--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Rest for The Clean Mates",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,10 @@
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "scripts": {
-    "dev": "nodemon server.js"
+    "@babel/preset-env": "^7.23.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "supertest-session": "^5.0.1"
   }
 }
